--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,7 @@ header img {
   display: flex;
   object-fit: contain;
   width: auto;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 header nav {
@@ -187,6 +187,7 @@ header nav {
 header nav a {
   color: black;
   text-decoration: none;
+  padding-top: 15px;
 }
 
 .top-content {
@@ -194,7 +195,7 @@ header nav a {
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
   border-bottom: 1px dashed black;
 }
 
@@ -224,6 +225,114 @@ header nav a {
   width: 12.5%;
   height: 100px;
   background: black;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box1 {
+  width: 12.5%;
+  height: 100px;
+  background: teal;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box2 {
+  width: 12.5%;
+  height: 100px;
+  background: gold;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box3 {
+  width: 12.5%;
+  height: 100px;
+  background: cadetblue;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box4 {
+  width: 12.5%;
+  height: 100px;
+  background: coral;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box5 {
+  width: 12.5%;
+  height: 100px;
+  background: crimson;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.box6 {
+  width: 12.5%;
+  height: 100px;
+  background: forestgreen;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.box7 {
+  width: 12.5%;
+  height: 100px;
+  background: darkorchid;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box8 {
+  width: 12.5%;
+  height: 100px;
+  background: hotpink;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box9 {
+  width: 12.5%;
+  height: 100px;
+  background: indigo;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box10 {
+  width: 12.5%;
+  height: 100px;
+  background: dodgerblue;
   margin: 20px 2.5%;
   color: white;
   display: flex;
