--- a/css/index.css
+++ b/css/index.css
@@ -232,112 +232,44 @@ header nav a {
   justify-content: center;
 }
 
-.box1 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(1) {
   background: teal;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box2 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(2) {
   background: gold;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box3 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(3) {
   background: cadetblue;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box4 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(4) {
   background: coral;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box5 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(5) {
   background: crimson;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-.box6 {
-  width: 12.5%;
-  height: 100px;
+
+.boxes > .box:nth-child(6) {
   background: forestgreen;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-.box7 {
-  width: 12.5%;
-  height: 100px;
+
+.boxes > .box:nth-child(7) {
   background: darkorchid;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box8 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(8) {
   background: hotpink;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box9 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(9) {
   background: indigo;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.box10 {
-  width: 12.5%;
-  height: 100px;
+.boxes > .box:nth-child(10) {
   background: dodgerblue;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .bottom-content {
